Upgrade 3.3 (#20)
* add default org store structure

* add default org store structure

* add default org store structure

* add default org store structure

* add default org store structure

* add default org store structure

---------

Co-authored-by: as-mahmoud <asmahmoud@unifonic.com>